kube/base/stateless/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: w16
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
